# s2stools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGES.TXT  CONTRIBUTING.rst  LICENSE  README.md  README.rst  VERSION  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_docs.txt  setup.py
clim/: __init__.py
docs/: api.rst  conf.py  index.rst  make.bat  requirements.txt  requirements_docs.txt  tutorials.rst
docs/_autosummary/: s2stools.clim.climatology.rst  s2stools.clim.deseasonalize.rst  s2stools.clim.nam.rst  s2stools.clim.rst  s2stools.download.S2SDownloader.rst  s2stools.download.ecmwf.S2SDownloaderECMWF.rst  s2stools.download.ecmwf.model_setup.rst  s2stools.download.ecmwf.rst  s2stools.download.rst  s2stools.events.EventComposite.rst  s2stools.events.blocks_where.rst  s2stools.events.find_ssw.rst  s2stools.events.rst  s2stools.events.ssw_compendium_event_dates.rst  s2stools.plot.cyclic_xyz.rst  s2stools.plot.rst  s2stools.plot.spaghetti.rst  s2stools.plot.symmetric_ylim.rst  s2stools.plot.themes.rst  s2stools.plot.xaxis_unit_days.rst  s2stools.process.rst  (+15 more)
download/: __init__.py  develop.ipynb
events/: __init__.py  workflow.md
open/: __init__.py
plot/: __init__.py
process/: __init__.py
s2stools/: __init__.py  _version.py  clim.py  compute.py  events.py  indices.py  mymodule2.py  plot.py  process.py  utils.py
tests/: download.py  test_clim.py  test_deseasonalize.py  test_download.py  test_events.py  test_indices.py  test_open.py  test_process.py  test_utils.py  utils.py
utils/: __init__.py
(+152 files in other folders)
